--- a/templates/index.html
+++ b/templates/index.html
@@ -68,10 +68,11 @@
                         </div>
                     </div>
                     <a href="{% url 'alo' %}" class="nav-item nav-link">Aloqa</a>
+                    <a href="{% url 'sig' %}">Sign Up</a>
+                    <a href="{% url 'login' %}">Log In</a>
                 </div>
                 <a href="" class="btn btn-primary rounded-pill px-3 d-none d-lg-block">Join Us<i class="fa fa-arrow-right ms-3"></i></a>
             </div>
-            <a href="signin.html"><i class="fa fa-lock"></i>Login / Register</a>
         </nav>
         <!-- Navbar End -->
 
